<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">University Chat</string>
    <string name="title_activity_login_window">University Chat</string>
    <string name="menu_settings">Settings</string>
    <string name="enter_user_hint">Enter User Name Here...</string>
    <string name="enter_pw_hint">Enter Password Here...</string>
    <string name="login_btn">Login</string>
    <string name="loginAnon_btn">Log in as Guest</string>
    <string name="Sign_up_link">Sign-up for University Chat</string>
    <string name="type_msg_prompt">Type message here...</string>
    <string name="send_btn">Send</string>
    <string name="exit_btn">Kill App (for Debug)</string>
    <string name="singup_fname_hint">Enter First Name Here...</string>
    <string name="signup_username_hint">Enter User Name Here...</string>
    <string name="signup_email_hint">Enter Email Here...</string>
    <string name="signup_pw_hint">Enter Password Here...</string>
    <string name="signup_vpw_hint">Verify Password Here...</string>
    <string name="signup_btn_confirm">Confirm</string>
    <string name="signup_header_text">Sign-Up</string>
    <string name="signup_window">Sign-Up</string>
    <string name="chatroom_public">Public</string>
    <string name="chatroom_private">Private</string>
    <string name="chatmemberlist">Members</string>
    <string name="or_txtview">OR</string>
    <string name="lbl_num_users"># Users: </string>
    <string name="num_users">000</string>
    <string name="lbl_users">Users</string>
    <string name="about_title">About</string>
    <string name="about_content">University Chat was created by:\nShane Honanie\nDarren Korman\nJames Schefter\nKevin Pun\nChris Fox\nAhmad Salama\nKelvin Hsieh\n\nCheck out our website at\nhttp://universitychat.azurewebsites.net/\n\nVersion 1.0</string>
    <string name="prompt_close">Close</string>
    <string name="menu_about">About</string>
    <string name="menu_change_host">Change Host</string>
    <string name="menu_create_channel">Create Channel</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_remove_channel">Remove Channel</string>
    <string name="menu_kill_app">Kill App</string>
    <string name="prompt_feedback_redirection">Warning! You will be re-directed to your mobile web browser which will boot you from University Chat.</string>
    <string name="prompt_remember_user">Keep me logged in</string>
    <string name="btn_reset">Reset</string>
    <string name="signup_lname_hint">Enter Last Name Here...</string>


</resources>