<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginWindow" >

    <TextView
        android:id="@+id/uchatheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="normal"
        android:typeface="serif" />

    <EditText
        android:id="@+id/txt_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_user_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/txt_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/enter_pw_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:onClick="loginAttempt"
            android:text="@string/login_btn" />

        <CheckBox
            android:id="@+id/chkbx_user_save_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/prompt_remember_user" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="OR"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"
            android:typeface="normal" />

        <Button
            android:id="@+id/btn_loginAnonymous"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="loginAttempt"
            android:text="@string/loginAnon_btn" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_signuplink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="20"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="startSignUpActivity"
        android:text="@string/Sign_up_link"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>